added test target to makefile

--- a/tests/simple_test/Makefile
+++ b/tests/simple_test/Makefile
@@ -4,5 +4,12 @@ all: simple
 simple: 
 	gcc -o simple simple.c -lrt -lksnap
 
+tests : simple
+	pushd ../../source/module; \
+	sudo ./install.sh y; \
+	popd; \
+	sudo rm *.mem; \
+	./simple;
+
 clean:
 	rm simple;
