--- a/source/lib/conversion/Makefile
+++ b/source/lib/conversion/Makefile
@@ -1,7 +1,7 @@
 CFLAGS = -g -std=gnu99 -fPIC
 #SOURCES = sync.o ftrace.o shmUtility.o ksnap_test_sub.o ksnap_test_owner.o memcpy_shm.o ksnap.o time_util.o bitmap.o
 SOURCES = sync.o ksnap.o time_util.o bitmap.o
-LIBS = -pthread
+LIBS = -pthread -lrt
 
 #INSTALLDIR = /usr/lib
 INSTALLLIB = /usr/local/include
