Adding simple test to the test target in the root makefile.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,11 +1,21 @@
 
 SHELL=/bin/bash
 
-.PHONY: array_test
+.PHONY: simple_test array_test
 
-all : array_test
+all : simple_test array_test
+
+simple_test:
+	echo "SIMPLE TEST"; \
+	printf "\n\n\n"; \
+	pushd simple_test; \
+	make; \
+	make tests; \
+	popd;
 
 array_test :
+	echo "ARRAY TEST"; \
+	printf "\n\n\n"; \
 	pushd array_test; \
 	make; \
 	make tests; \
