--- a/source/module/Makefile
+++ b/source/module/Makefile
@@ -7,6 +7,7 @@ ksnapmod-y = cv_main.o ksnap_writer.o ksnap_version_list.o cv_commit.o cv_commit
 #-DCONV_LOGGING_ON - Adds *lots* of logging information. Be careful when using this flag with SERIOUS workloads which make lots of conversion calls
 #-DCV_STATS_ON - Generates statistics about number of calls to various conversion operations
 #-DCV_HOOKS - Uses the hooks (function pointers) on certain events
+#-DCV_EVENT_ON - Used for adding find grained event logging in the code...gets printed out when a thread closes the conversion segment
 
 KBUILD_CFLAGS += -g -O3 --param max-unroll-times=16 -funroll-loops -Wno-declaration-after-statement #-DCONV_ATOMIC -DCONV_LOGGING_ON
 
