Some changes to the simple test (which really isn't so simple) and removed the array_test for now.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,7 +3,7 @@ SHELL=/bin/bash
 
 .PHONY: common simple_test array_test
 
-all : common simple_test array_test partial
+all : common simple_test partial
 
 
 simple_test: common
