Added a flag for memory accounting

--- a/source/module/Makefile
+++ b/source/module/Makefile
@@ -10,7 +10,7 @@ ksnapmod-y = cv_main.o ksnap_writer.o ksnap_version_list.o cv_commit.o cv_update
 #-DCV_EVENT_ON - Used for adding find grained event logging in the code...gets printed out when a thread closes the conversion segment
 #-DCV_PROFILING_ON - Keeps track of information about each commit and then can be printed to the log from userspace
 
-KBUILD_CFLAGS += -g -O3 --param max-unroll-times=16 -funroll-loops -Wno-declaration-after-statement
+KBUILD_CFLAGS += -g -O3 --param max-unroll-times=16 -funroll-loops -Wno-declaration-after-statement #-DCV_MEM_ACCOUNTING_ON
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
