Added the conv_fence function to replace conv_commit_and_update

--- a/tests/partial_updates_test/Makefile
+++ b/tests/partial_updates_test/Makefile
@@ -12,5 +12,9 @@ clean:
 	rm *.mem*;
 
 tests:
+	printf "\n\n"; \
+	echo "*********Testing Partial Updates Optimization*********"; \
 	for i in `seq 1 100`; do ./partial > /tmp/out$i; cat /tmp/out$i | grep FAIL > /tmp/fails; done; \
-	if [ `cat /tmp/fails | wc -l | awk '{print $0}'` -gt 0 ]; then echo "FAILED"; else echo "SUCCESS"; fi;
+	if [ `cat /tmp/fails | wc -l | awk '{print $0}'` -gt 0 ]; then echo "FAILED"; else echo "SUCCESS"; fi; \
+	printf "\n\n"; \
+	echo "********DONE*******";
