--- a/source/module/Makefile
+++ b/source/module/Makefile
@@ -14,7 +14,7 @@ ksnapmod-y += libudis86/decode.o libudis86/itab.o libudis86/syn-att.o libudis86/
 #-DCV_LOGGING_DISABLED - disable logging
 #-DCV_DEBUG_MEMORY_ALLOC - prints debugging info for memory allocations/frees
 
-KBUILD_CFLAGS += -g -O3 --param max-unroll-times=16 -funroll-loops -Wno-declaration-after-statement -IcreateStoreInterpreterFunctions -DCV_FORCE_LOGGING #-DCV_LOGGING_DISABLED #-DCV_FORCE_LOGGING #-DCV_DEBUG_MEMORY_ALLOC #-DCV_DETERMINISM -DCV_HOOKS
+KBUILD_CFLAGS += -g -O3 --param max-unroll-times=16 -funroll-loops -Wno-declaration-after-statement -IcreateStoreInterpreterFunctions -DCV_LOGGING_DISABLED
 
 all: cv_main.c ksnap_writer.c ksnap_version_list.c cv_commit.c cv_update.c cv_garbage.c cv_per_page_version.c cv_stats.c cv_init.c cv_meta_data.c cv_merge.c cv_pte.c cv_fork.c cv_close.c cv_revert.c cv_checkpoint.c cv_determinism.c
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD)
