Adding fine-grained locking for logging entries.

--- a/source/module/Makefile
+++ b/source/module/Makefile
@@ -1,5 +1,5 @@
 obj-m = ksnapmod.o
-ksnapmod-y = cv_main.o ksnap_writer.o ksnap_version_list.o cv_commit.o cv_update.o cv_garbage.o cv_per_page_version.o cv_stats.o cv_init.o cv_meta_data.o cv_merge.o cv_pte.o cv_fork.o cv_close.o cv_revert.o cv_checkpoint.o cv_determinism.o cv_logging.o cv_decode.o cv_store_interpreter.o
+ksnapmod-y = cv_main.o ksnap_writer.o ksnap_version_list.o cv_commit.o cv_update.o cv_garbage.o cv_per_page_version.o cv_stats.o cv_init.o cv_meta_data.o cv_merge.o cv_pte.o cv_fork.o cv_close.o cv_revert.o cv_checkpoint.o cv_determinism.o cv_logging.o cv_decode.o cv_store_interpreter.o lock_hashmap.o ticket_lock.o
 
 ksnapmod-y += libudis86/decode.o libudis86/itab.o libudis86/syn-att.o libudis86/syn.o libudis86/syn-intel.o libudis86/udis86.o
 
@@ -15,11 +15,12 @@ ksnapmod-y += libudis86/decode.o libudis86/itab.o libudis86/syn-att.o libudis86/
 #-DCV_DEBUG_MEMORY_ALLOC - prints debugging info for memory allocations/frees
 #-DCV_FORCE_LOGGING - force logging on every page
 #-DCV_MEMTRACE_DEBUG - log the values of certain cache lines (marked in conversion.h)
+#-DLOGGING_LATENCY_TRACING
 
 ifeq ($(LOGGING),false)
 	LOGGING_MODE = -DCV_LOGGING_DISABLED
-#else
-#	LOGGING_MODE = -DCV_FORCE_LOGGING
+else
+	LOGGING_MODE = -DCV_FORCE_LOGGING
 endif
 
 KBUILD_CFLAGS += -g -O3 --param max-unroll-times=16 -funroll-loops -Wno-declaration-after-statement -IcreateStoreInterpreterFunctions $(LOGGING_MODE) -DCV_COUNTERS_ON
